--- a/conf/application.conf
+++ b/conf/application.conf
@@ -21,6 +21,8 @@ appName = other-deductions-api
 
 appUrl = "http://localhost:7797"
 
+minimumPermittedTaxYear = 2020 # This is in DES format so '2020' corresponds to the 2019-20 tax year.
+
 # Session Timeout
 # ~~~~
 # The default session timeout for the app is 15 minutes (900seconds).
