--- a/resources/public/api/conf/1.0/common/errors.yaml
+++ b/resources/public/api/conf/1.0/common/errors.yaml
@@ -8,126 +8,70 @@ components:
         The format of the supplied NINO field is not valid.
       value:
         code: FORMAT_NINO
+        message: The provided NINO is invalid
 
     formatTaxYear:
       description: |
         The format of the supplied tax year field is not valid.
       value:
         code: FORMAT_TAX_YEAR
+        message: The provided tax year is invalid
 
     incorrectOrEmptyBody:
       description: |
         An empty or non-matching body was submitted.
       value:
         code: RULE_INCORRECT_OR_EMPTY_BODY_SUBMITTED
+        message: An empty or non-matching body was submitted
 
     ruleTaxYearNotSupported:
       description: |
         The specified tax year is not supported. Either the tax year specified is before the minimum tax year value, or it is after the maximum tax year value.
       value:
         code: RULE_TAX_YEAR_NOT_SUPPORTED
-
-    ruleTaxYearRangeExceeded:
-      description: |
-        Tax year range exceeded. A tax year range of one year is required.
-      value:
-        code: RULE_TAX_YEAR_RANGE_EXCEEDED
-
-    ruleTaxYearNotEnded:
-      description: |
-        A brought forward loss is entered before the end of the tax year in which it was generated.
-      value:
-        code: RULE_TAX_YEAR_NOT_ENDED
-
-    formatLossType:
-      description: |
-        The format of the loss type is not valid.
-      value:
-        code: FORMAT_TYPE_OF_LOSS
-
-    formatSelfEmploymentId:
-      description: |
-        The format of the self-employment ID is not valid.
-      value:
-        code: FORMAT_SELF_EMPLOYMENT_ID
-
-    ruleSelfEmploymentId:
-      description: |
-        A self-employment ID can only be supplied for a self-employment business type.
-      value:
-        code: RULE_SELF_EMPLOYMENT_ID
-
-    formatLossId:
-      description: |
-        The format of the loss ID is not valid.
-      value:
-        code: FORMAT_LOSS_ID
-
-    formatLossAmount:
-      description: |
-        The format of the loss amount is not valid.
-      value:
-        code: FORMAT_LOSS_AMOUNT
-
-    ruleLossAmount:
-      description: |
-        Amounts should be a positive number less than 99999999999.99 with up to 2 decimal places.
-      value:
-        code: RULE_LOSS_AMOUNT
-
-    formatTypeOfClaim:
-      description: |
-        The format of the type of claim is not valid.
-      value:
-        code: FORMAT_TYPE_OF_CLAIM
-
-    ruleTypeOfClaim400:
-      description: |
-        The type of claim supplied is not valid.
-      value:
-        code: RULE_TYPE_OF_CLAIM_INVALID
-
-    formatClaimId:
-      description: |
-        The format of the supplied claim ID is not valid.
-      value:
-        code: FORMAT_CLAIM_ID
+        message: The tax year specified does not lie within the supported range
 
     ruleTaxYearRangeInvalid:
       description: |
         Tax year range invalid. A tax year range of one year is required.
       value:
         code: RULE_TAX_YEAR_RANGE_INVALID
+        message: Tax year range invalid. A tax year range of one year is required
 
     formatValue:
       description: |
         One or more values have been added with the incorrect format.
       value:
         code: FORMAT_VALUE
+        message: Include paths to failing fields (see example below)
 
     formatNameOfShip:
       description: |
         The format of the name of ship is not valid.
       value:
         code: FORMAT_NAME_OF_SHIP
+        message: The provided name of ship is not valid
 
     formatCustomerReference:
       description: |
         The format of customer reference is not valid.
       value:
         code: FORMAT_CUSTOMER_REFERENCE
+        message: The provided customer reference is not valid
 
     formatDate:
       description: |
         The supplied date format is invalid.
       value:
         code: FORMAT_DATE
+        message: Include paths to failing fields (see example below)
 
     rangeToDateBeforeFromDate:
       description: |
         The To date is before the From date.
       value:
         code: RANGE_TO_DATE_BEFORE_FROM_DATE
+        message: The To date is before the From date
 
 
     # 403
