--- a/resources/public/api/conf/1.0/retrieve_deductions.yaml
+++ b/resources/public/api/conf/1.0/retrieve_deductions.yaml
@@ -30,7 +30,6 @@ parameters:
   - $ref: './common/pathParameters.yaml#/components/parameters/nino'
   - $ref: './common/pathParameters.yaml#/components/parameters/taxYear'
   - $ref: './common/headers.yaml#/components/parameters/acceptJson'
-  - $ref: './common/headers.yaml#/components/parameters/contentTypeJson'
   - $ref: './common/headers.yaml#/components/parameters/authorization'
   - $ref: './common/headers.yaml#/components/parameters/testScenarioHeader'
 
@@ -68,7 +67,7 @@ responses:
           RULE_TAX_YEAR_RANGE_INVALID:
             $ref: './common/errors.yaml#/components/examples/ruleTaxYearRangeInvalid'
           FORMAT_VALUE:
-            $ref: '../common/errors.yaml#/components/examples/formatValue'
+            $ref: './common/errors.yaml#/components/examples/formatValue'
           RULE_TAX_YEAR_NOT_SUPPORTED:
             $ref: './common/errors.yaml#/components/examples/ruleTaxYearNotSupported'
 
