--- a/resources/public/api/conf/1.0/common/errors.yaml
+++ b/resources/public/api/conf/1.0/common/errors.yaml
@@ -81,54 +81,7 @@ components:
         The client and/or agent is not authorised. This is normally because: the client is not subscribed to MTD, the agent is not subscribed to Agent Services, or the client has not authorised the agent to act on their behalf.
       value:
         code: CLIENT_OR_AGENT_NOT_AUTHORISED
-
-    ruleNoChangeTypeOfClaim:
-      description: |
-        The remote endpoint has indicated that the requested type of claim is already active.
-      value:
-        code: RULE_ALREADY_EXISTS
-
-    ruleTypeOfClaim403:
-      description: |
-        The type of claim supplied is not valid.
-      value:
-        code: RULE_TYPE_OF_CLAIM_INVALID
-
-    rulePeriodNotEnded:
-      description: |
-        The loss claim has been made too soon.
-      value:
-        code: RULE_PERIOD_NOT_ENDED
-
-    ruleDuplicateSubmission:
-      description: |
-        A brought forward loss already exists for this income source.
-      value:
-        code: RULE_DUPLICATE_SUBMISSION
-
-    ruleDuplicateClaimSubmission:
-      description: |
-        The type of claim is the same as a previous submission.
-      value:
-        code: RULE_DUPLICATE_SUBMISSION
-
-    ruleDeleteAfterCrystallisation:
-      description: |
-        An existing brought forward loss cannot be deleted after it has been crystallised.  The requested resource is locked.
-      value:
-        code: RULE_DELETE_AFTER_CRYSTALLISATION
-
-    ruleNoChangeLossAmount:
-      description: |
-        The loss amount supplied is the same as the existing stored loss amount.
-      value:
-        code: RULE_NO_CHANGE
-
-    ruleNoAccountingPeriod:
-      description: |
-        There is no accounting period for the year of the claim.
-      value:
-        code: RULE_NO_ACCOUNTING_PERIOD
+        message: The client or agent is not authorised
 
 
     # 404
@@ -138,27 +91,5 @@ components:
         The matching resource is not found.
       value:
         code: MATCHING_RESOURCE_NOT_FOUND
+        message: Matching resource not found
 
-    notFoundIncomeSource:
-      description: |
-        The remote endpoint has indicated that the given income source could not be found.
-      value:
-        code: MATCHING_RESOURCE_NOT_FOUND
-
-    notFoundNino:
-      description: |
-        The remote endpoint has indicated that no data can be found for the given NINO.
-      value:
-        code: MATCHING_RESOURCE_NOT_FOUND
-
-    notFoundLossId:
-      description: |
-        The remote endpoint has indicated that no data can be found for the given loss ID.
-      value:
-        code: MATCHING_RESOURCE_NOT_FOUND
-
-    notFoundClaimId:
-      description: |
-        The remote endpoint has indicated that no data can be found for the given claim ID.
-      value:
-        code: MATCHING_RESOURCE_NOT_FOUND
