--- a/resources/public/api/conf/1.0/common/errors.yaml
+++ b/resources/public/api/conf/1.0/common/errors.yaml
@@ -43,7 +43,7 @@ components:
         One or more values have been added with the incorrect format.
       value:
         code: FORMAT_VALUE
-        message: Include paths to failing fields (see example below)
+        message: The field should be between 0 and 99999999999.99
 
     formatNameOfShip:
       description: |
@@ -64,7 +64,7 @@ components:
         The supplied date format is invalid.
       value:
         code: FORMAT_DATE
-        message: Include paths to failing fields (see example below)
+        message: The field should be in the format YYYY-MM-DD
 
     rangeToDateBeforeFromDate:
       description: |
@@ -78,7 +78,7 @@ components:
 
     clientOrAgentNotAuthorised:
       description: |
-        The client and/or agent is not authorised. This is normally because: the client is not subscribed to MTD, the agent is not subscribed to Agent Services, or the client has not authorised the agent to act on their behalf.
+        The client or agent is not authorised. This is because: the client is not subscribed to MTD, the agent is not subscribed to Agent Services, or the client has not authorised the agent to act on their behalf.
       value:
         code: CLIENT_OR_AGENT_NOT_AUTHORISED
         message: The client or agent is not authorised
