--- a/conf/application.conf
+++ b/conf/application.conf
@@ -178,3 +178,8 @@ microservice {
         }
   }
 }
+
+play.filters.enabled += "play.filters.cors.CORSFilter"
+play.filters.cors {
+  allowedOrigins = ["http://localhost:9680"]
+}
