--- a/resources/public/api/conf/1.0/other_deductions.yaml
+++ b/resources/public/api/conf/1.0/other_deductions.yaml
@@ -1,6 +1,26 @@
 put:
-  $ref: "./create_and_amend_deductions.yaml"
+  $ref: "./other_deductions_create_and_amend.yaml"
+
+  summary: Create and Amend deductions
+
+  security:
+    - User-Restricted:
+        - write:self-assessment
+
 get:
-  $ref: "./retrieve_deductions.yaml"
+  $ref: "./other_deductions_retrieve.yaml"
+
+  summary: Retrieve deductions
+
+  security:
+    - User-Restricted:
+        - read:self-assessment
+
 delete:
-  $ref: "./delete_deductions.yaml"
+  $ref: "./other_deductions_delete.yaml"
+
+  summary: Delete deductions
+
+  security:
+    - User-Restricted:
+        - write:self-assessment
