--- a/resources/public/api/conf/1.0/other_deductions_create_and_amend.yaml
+++ b/resources/public/api/conf/1.0/other_deductions_create_and_amend.yaml
@@ -1,4 +1,4 @@
-summary: Create and Amend Deductions
+summary: Create and Amend deductions
 description: |
   This endpoint enables you to create and amend deductions. A National Insurance number and tax year must be provided.
   
@@ -18,7 +18,6 @@ description: |
           </tr>
       </tbody>
   </table>
-
 
 parameters:
   - $ref: './common/pathParameters.yaml#/components/parameters/nino'
