[CK] Fix OAS error and inline endpoints when they all share the same path and update endpoints names to match RAML with OAS.

--- a/resources/public/api/conf/1.0/delete_deductions.yaml
+++ b/resources/public/api/conf/1.0/delete_deductions.yaml
@@ -1,4 +1,4 @@
-summary: Delete Deductions
+summary: Delete deductions
 description: |
   This endpoint allows the developer to delete deductions.
   
