--- a/resources/public/api/conf/1.0/retrieve_deductions.yaml
+++ b/resources/public/api/conf/1.0/retrieve_deductions.yaml
@@ -1,4 +1,4 @@
-summary: Retrieve Deductions
+summary: Retrieve deductions
 description: |
   This endpoint allows a developer to retrieve deductions that have been previously populated. A National Insurance number and tax year must be provided.
   
