MTDSA-14108: updated raml and yaml with correct endpoint naming (#72)
* MTDSA-14108: updated raml with correct endpoint namings

* MTDSA-14108: updated yaml with correct endpoint namings

* MTDSA-14108: addressed platops comments

--- a/resources/public/api/conf/1.0/other_deductions_create_and_amend.yaml
+++ b/resources/public/api/conf/1.0/other_deductions_create_and_amend.yaml
@@ -1,4 +1,4 @@
-summary: Create and Amend deductions
+summary: Create and Amend Deductions
 description: |
   This endpoint enables you to create and amend deductions. A National Insurance number and tax year must be provided.
   
