--- a/resources/public/api/conf/1.0/other_deductions_delete.yaml
+++ b/resources/public/api/conf/1.0/other_deductions_delete.yaml
@@ -1,4 +1,4 @@
-summary: Delete deductions
+summary: Delete Deductions
 description: |
   This endpoint allows the developer to delete deductions.
   
