--- a/resources/public/api/conf/1.0/other_deductions_retrieve.yaml
+++ b/resources/public/api/conf/1.0/other_deductions_retrieve.yaml
@@ -1,4 +1,4 @@
-summary: Retrieve deductions
+summary: Retrieve Deductions
 description: |
   This endpoint allows a developer to retrieve deductions that have been previously populated. A National Insurance number and tax year must be provided.
   
