MTDSA-15391: Adding stateful Gov-Test-Scenario to OAS

--- a/resources/public/api/conf/1.0/other_deductions_create_and_amend.yaml
+++ b/resources/public/api/conf/1.0/other_deductions_create_and_amend.yaml
@@ -16,6 +16,10 @@ description: |
               <td><p>N/A - DEFAULT</p></td>
               <td><p>Simulates success response.</p></td>
           </tr>
+          <tr>
+              <td><p>STATEFUL</p></td>
+              <td><p>Simulates a stateful success response.</p></td>
+          </tr>
       </tbody>
   </table>
 
