--- a/resources/public/api/conf/1.0/other_deductions_retrieve.yaml
+++ b/resources/public/api/conf/1.0/other_deductions_retrieve.yaml
@@ -20,6 +20,10 @@ description: |
               <td><p>NOT_FOUND</p></td>
               <td><p>Simulates the scenario where the given deduction could not be found.</p></td>
           </tr>
+          <tr>
+              <td><p>STATEFUL</p></td>
+              <td><p>Simulates a stateful success response.</p></td>
+          </tr>
       </tbody>
   </table>
 
