--- a/resources/public/api/conf/1.0/common/errors.yaml
+++ b/resources/public/api/conf/1.0/common/errors.yaml
@@ -73,6 +73,12 @@ components:
         code: RANGE_TO_DATE_BEFORE_FROM_DATE
         message: The To date is before the From date
 
+    ruleIncorrectGovTestScenario:
+      description: The request did not match any available Sandbox data. Check that the supplied Gov-Test-Scenario is correct for this endpoint version. This error will only be returned in the Sandbox environment.
+      value:
+        code: RULE_INCORRECT_GOV_TEST_SCENARIO
+        message: The Gov-Test-Scenario was not found
+
 
     # 403
 
