MTDSA-16039: Remove redundant feature switches (#89)

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -88,8 +88,8 @@ play.modules.enabled += "config.DIModule"
 api {
   # The status of the version of the API for the API Platform.
   1.0 {
-    status = "ALPHA"
-    endpoints.enabled = false
+    status = "BETA"
+    endpoints.enabled = true
   }
 
   confidence-level-check {
@@ -120,24 +120,12 @@ metrics {
 
 auditing {
   enabled = true
-  traceRequests = true
   consumer {
     baseUri {
       host = localhost
       port = 8100
     }
   }
-}
-
-feature-switch {
-
-  version-1 {
-    enabled = true
-  }
-
-   tys-api {
-      enabled = true
-    }
 }
 
 microservice {
