--- a/resources/public/api/conf/1.0/other_deductions_create_and_amend.yaml
+++ b/resources/public/api/conf/1.0/other_deductions_create_and_amend.yaml
@@ -3,25 +3,12 @@ description: |
   This endpoint enables you to create and amend deductions. A National Insurance number and tax year must be provided.
   
   ### Test data
-  <p>Scenario simulations using <code>Gov-Test-Scenario</code> headers is only available in the sandbox environment.</p>
-  <table>
-      <thead>
-          <tr>
-              <th>Header Value (Gov-Test-Scenario)</th>
-              <th>Scenario</th>
-          </tr>
-      </thead>
-      <tbody>
-          <tr>
-              <td><p>N/A - DEFAULT</p></td>
-              <td><p>Simulates success response.</p></td>
-          </tr>
-          <tr>
-              <td><p>STATEFUL</p></td>
-              <td><p>Performs a stateful create or update.</p></td>
-          </tr>
-      </tbody>
-  </table>
+  Scenario simulation using Gov-Test-Scenario headers is only available in the sandbox environment.
+  
+  | Header Value (Gov-Test-Scenario) | Scenario                                                         |
+  |----------------------------------|------------------------------------------------------------------|
+  | N/A - DEFAULT                    | Simulates success response.                                      |
+  | STATEFUL                         | Performs a stateful create or update.                            |      
 
 parameters:
   - $ref: './common/pathParameters.yaml#/components/parameters/nino'
