--- a/conf/application.conf
+++ b/conf/application.conf
@@ -82,6 +82,12 @@ api {
     auth-validation.enabled = true
   }
 
+  supporting-agent-endpoints {
+    create-amend-other-deductions = true
+    delete-other-deductions = true
+    retrieve-other-deductions = true
+  }
+
   # The context which the API will have via the API Platform http://API_GATEWAY/{api.gateway.context}/
   gateway.context = "individuals/deductions/other"
 }
@@ -99,6 +105,15 @@ metrics {
 
 auditing {
   enabled = true
+}
+
+# Feature Switches
+# `released-in-production` setting is only used in ET and shouldn't be in the production config
+feature-switch {
+  supporting-agents-access-control {
+     enabled = true
+     released-in-production = false
+  }
 }
 
 microservice {
