MTDSA-26622 fix IT

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -74,6 +74,7 @@ api {
   1.0 {
     status = "BETA"
     endpoints.enabled = true
+    endpoints.api-released-in-production = true
   }
 
   confidence-level-check {
