--- a/resources/public/api/conf/2.0/other_deductions_create_and_amend.yaml
+++ b/resources/public/api/conf/2.0/other_deductions_create_and_amend.yaml
@@ -5,10 +5,11 @@ description: |
   ### Test data
   Scenario simulation using Gov-Test-Scenario headers is only available in the sandbox environment.
   
-  | Header Value (Gov-Test-Scenario) | Scenario                                                         |
-  |----------------------------------|------------------------------------------------------------------|
-  | N/A - DEFAULT                    | Simulates success response.                                      |
-  | STATEFUL                         | Performs a stateful create or update.                            |      
+  | Header Value (Gov-Test-Scenario) | Scenario                                                                                       |
+  |----------------------------------|------------------------------------------------------------------------------------------------|
+  | N/A - DEFAULT                    | Simulates success response.                                                                    |
+  | STATEFUL                         | Performs a stateful create or update.                                                          |
+  | OUTSIDE_AMENDMENT_WINDOW         | Simulates the scenario where request cannot be completed as it is outside the amendment window.|
 
 parameters:
   - $ref: './common/pathParameters.yaml#/components/parameters/nino'
@@ -76,6 +77,8 @@ responses:
             $ref: './common/errors.yaml#/components/examples/rangeToDateBeforeFromDate'
           RULE_TAX_YEAR_NOT_SUPPORTED:
             $ref: './common/errors.yaml#/components/examples/ruleTaxYearNotSupported'
+          RULE_OUTSIDE_AMENDMENT_WINDOW:
+            $ref: './common/errors.yaml#/components/examples/ruleOutsideAmendmentWindow'
           RULE_INCORRECT_GOV_TEST_SCENARIO:
             $ref: './common/errors.yaml#/components/examples/ruleIncorrectGovTestScenario'
 
