--- a/resources/public/api/conf/1.0/other_deductions_create_and_amend.yaml
+++ b/resources/public/api/conf/1.0/other_deductions_create_and_amend.yaml
@@ -51,6 +51,9 @@ responses:
 
   "400":
     description: Bad request
+    headers:
+      X-CorrelationId:
+        $ref: './common/headers.yaml#/components/parameters/correlationId'
     content:
       application/json:
         schema:
@@ -81,6 +84,9 @@ responses:
 
   "403":
     description: Forbidden
+    headers:
+      X-CorrelationId:
+        $ref: './common/headers.yaml#/components/parameters/correlationId'
     content:
       application/json:
         schema:
