--- a/resources/public/api/conf/2.0/other_deductions_create_and_amend.yaml
+++ b/resources/public/api/conf/2.0/other_deductions_create_and_amend.yaml
@@ -52,6 +52,9 @@ responses:
 
   "400":
     description: Bad request
+    headers:
+      X-CorrelationId:
+        $ref: './common/headers.yaml#/components/parameters/correlationId'
     content:
       application/json:
         schema:
@@ -84,6 +87,9 @@ responses:
 
   "403":
     description: Forbidden
+    headers:
+      X-CorrelationId:
+        $ref: './common/headers.yaml#/components/parameters/correlationId'
     content:
       application/json:
         schema:
