MTDSA-29201: API#1923 Align OAS for success responses (#110)

--- a/resources/public/api/conf/1.0/other_deductions_delete.yaml
+++ b/resources/public/api/conf/1.0/other_deductions_delete.yaml
@@ -23,8 +23,8 @@ security:
       - write:self-assessment
 
 responses:
-  "200":
-    description: Success
+  "204":
+    description: Success(No Content)
     headers:
       X-CorrelationId:
         $ref: './common/headers.yaml#/components/parameters/correlationId'
