--- a/resources/public/api/conf/2.0/other_deductions_create_and_amend.yaml
+++ b/resources/public/api/conf/2.0/other_deductions_create_and_amend.yaml
@@ -35,20 +35,11 @@ requestBody:
             $ref: './examples/create_and_amend_other_deductions_request.json'
 
 responses:
-  "200":
-    description: Success
+  "204":
+    description: Success(No Content)
     headers:
       X-CorrelationId:
         $ref: './common/headers.yaml#/components/parameters/correlationId'
-    content:
-      application/json:
-        schema:
-          $ref: './schemas/create_and_amend_other_deductions_response.json'
-        examples:
-          example-response:
-            description: Example Response
-            value:
-              $ref: './examples/create_and_amend_other_deductions_response.json'
 
   "400":
     description: Bad request
