--- a/conf/application.conf
+++ b/conf/application.conf
@@ -72,7 +72,8 @@ play.modules.enabled += "config.OtherDeductionsPlayModule"
 api {
   # The status of the version of the API for the API Platform.
   1.0 {
-    status = "BETA"
+    status = "DEPRECATED"
+    deprecatedOn = "2025-06-19"
     endpoints.enabled = true
     endpoints.api-released-in-production = true
   }
@@ -97,6 +98,7 @@ api {
 
   # The context which the API will have via the API Platform http://API_GATEWAY/{api.gateway.context}/
   gateway.context = "individuals/deductions/other"
+  documentation-url = "https://developer.service.hmrc.gov.uk/api-documentation/docs/api/service/other-deductions-api"
 }
 
 # HTTP Verbs related config
